DevOpsCheatsheets/k8s-from-scratch/k8s/nginx-ns-rolebinding.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
